--- a/sample-spring-boot-kitchensink/src/main/resources/templates/customer.html
+++ b/sample-spring-boot-kitchensink/src/main/resources/templates/customer.html
@@ -97,7 +97,7 @@
       												<input type = "hidden" name = "name" th:value="${customer.getName()}"/>
       												<input type = "hidden" name = "bootableid" th:value="${customer.getBootableId()}"/>
       												<input type = "hidden" name = "pricePaid" th:value="${customer.getPricePaid()}"/>
-      												Price paid: <input class="form-control" type="number" name="payment" id="payment" maxlength="100"/>
+      												Price paid: <input class="form-control" step="0.01" type="number" name="payment" id="payment" maxlength="100"/>
       												<input type="submit" value="Update" />
       												</div>
       												</form>
