--- a/sample-spring-boot-kitchensink/src/main/resources/templates/double11.html
+++ b/sample-spring-boot-kitchensink/src/main/resources/templates/double11.html
@@ -37,7 +37,7 @@
         </div>
     	        <div class="col-md-8 col-sm-8">
             <div class="panel panel-default">
-                <div class="panel-heading">Tour List</div>
+                <div class="panel-heading">Activity List</div>
                 <div class="panel-body">
                     <table class="table table-striped">
                         <thead>
